tests/golden/compile-pass/extern_lua_basic.rua
extern "lua" {
    fn print(message: String);
}

fn main() {
    print("hello");
}
