tests/golden/compile-fail/type_while_condition_non_bool.rua
fn main() {
    while 1 {
        break;
    }
}
